--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <header class="header">
         <div class="container">
-            <a class="logo logo_light-theme link" href="">
-                <span class="logo__accent">Web</span>Studio
+            <a class="logo logo-light link" href="">
+                <span class="logo-accent">Web</span>Studio
             </a>
             <nav class="navigation">
                 <ul class="navigation-list list">
@@ -41,16 +41,16 @@
                 </ul>
             </nav>
             <ul class="contact-list list">
-                <li class="contact-list__item-mail">
-                    <a class="contact-list__email-link link" href="mailto:info@devstudio.com">
+                <li class="contact-list__item">
+                    <a class="contact-list__link link" href="mailto:info@devstudio.com">
                         <svg class="contact-list__icon" width="16" height="12">
                             <use href="./images/icons.svg#icon-mail"></use>
                         </svg>
                         info@devstudio.com
                     </a>
                 </li>
-                <li class="contact-list__item-number">
-                    <a class="contact-list__tel-link link" href="tel:+380961111111">
+                <li class="contact-list__item">
+                    <a class="contact-list__link link" href="tel:+380961111111">
                         <svg class="contact-list__icon" width="10" height="16">
                             <use href="./images/icons.svg#icon-number"></use>
                         </svg>
@@ -63,16 +63,16 @@
 
    <!--MAIN-->
 
-   <main class="main">
+   <main>
 
         <!--HERO-->
 
         <section class="hero bg">
             <div class="container">
-                <h1 class="container__hero-title">
+                <h1 class="hero__title">
                     Эффективные решения для вашего бизнеса
                 </h1>
-                <button class="hero-btn" type="button" data-modal-open>
+                <button class="hero__btn" type="button" data-modal-open>
                     Заказать
                 </button>
             </div>
@@ -80,69 +80,69 @@
 
         <!--ABOUT-->
 
-        <section class="about section">
+        <section class="features section">
             <div class="container">
-                <ul class="about-quality-list list">
-                    <li class="about-quality-list__item">
-                        <div class="about-quality-list__icon-wrapper">
-                            <svg class="about-quality-list__icon" width="70" height="70">
+                <ul class="features-list list">
+                    <li class="features-list__item">
+                        <div class="features-list__icon-wrapper">
+                            <svg class="features-list__icon" width="70" height="70">
                                 <use href="./images/icons.svg#icon-details"></use>
                             </svg>
                         </div>
-                        <h3 class="about-quality-list__title">Внимание к деталям</h3>
-                        <p class="about-quality-list__description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                        <h3 class="features-list__title">Внимание к деталям</h3>
+                        <p class="features-list__description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li class="about-quality-item">
-                        <div class="about-quality-list__icon-wrapper">
-                            <svg class="about-quality-list__icon" width="70" height="70">
+                    <li class="features-list__item">
+                        <div class="features-list__icon-wrapper">
+                            <svg class="features-list__icon" width="70" height="70">
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
-                        <h3 class="about-quality-list__title">Пунктуальность</h3>
-                        <p class="about-quality-list__description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        <h3 class="features-list__title">Пунктуальность</h3>
+                        <p class="features-list__description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li class="about-quality-item">
-                        <div class="about-quality-list__icon-wrapper">
-                            <svg class="about-quality-list__icon" width="70" height="70">
+                    <li class="features-list__item">
+                        <div class="features-list__icon-wrapper">
+                            <svg class="features-list__icon" width="70" height="70">
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
-                        <h3 class="about-quality-list__title">Планирование</h3>
-                        <p class="about-quality-list__description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        <h3 class="features-list__title">Планирование</h3>
+                        <p class="features-list__description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li class="about-quality-item">
-                        <div class="about-quality-list__icon-wrapper">
-                            <svg class="about-quality-list__icon" width="70" height="70">
+                    <li class="features-list__item">
+                        <div class="features-list__icon-wrapper">
+                            <svg class="features-list__icon" width="70" height="70">
                                 <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
-                        <h3 class="about-quality-list__title">Современные технологии</h3>
-                        <p class="about-quality-list__description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        <h3 class="features-list__title">Современные технологии</h3>
+                        <p class="features-list__description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
             </div>
         </section>
 
-        <section  class="about-img-section section">
+        <section  class="about">
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
-                <ul class="about-img-list list">
-                    <li class="about-img-list__item">
-                        <div class="about-img-list__content-wrapper">
-                            <img class="about-img-list__img" src="./images/box-1.jpg" alt="человек пишет код" height="294">
-                        <p class="about-img-list__content">Десктопные приложения</p>
+                <ul class="about-list list">
+                    <li class="about-list__item">
+                        <div class="about-list__wrapper">
+                            <img class="about-list__img" src="./images/box-1.jpg" alt="человек пишет код" height="294">
+                        <p class="about-list__content">Десктопные приложения</p>
                         </div>
                     </li>
-                    <li class="about-img-list__item">
-                        <div class="about-img-list__content-wrapper">
-                        <img class="about-img-list__img" src="./images/box-2.jpg" alt="человек делает дизайн приложения" height="294">
-                        <p class="about-img-list__content">Мобильные приложения</p>
+                    <li class="about-list__item">
+                        <div class="about-list__wrapper">
+                        <img class="about-list__img" src="./images/box-2.jpg" alt="человек делает дизайн приложения" height="294">
+                        <p class="about-list__content">Мобильные приложения</p>
                         </div>
                     </li>
-                    <li class="about-img-list__item">
-                        <div class="about-img-list__content-wrapper">
-                        <img class="about-img-list__img" src="./images/box-3.jpg" alt="человек подбирает правильный цвет" height="294">
-                        <p class="about-img-list__content">Дизайнерские решения</p>
+                    <li class="about-list__item">
+                        <div class="about-list__wrapper">
+                        <img class="about-list__img" src="./images/box-3.jpg" alt="человек подбирает правильный цвет" height="294">
+                        <p class="about-list__content">Дизайнерские решения</p>
                         </div>
                     </li>
                 </ul>
@@ -157,9 +157,9 @@
                 <ul class="team-list list">
                     <li class="team-list__item">
                         <img class="team-list__img" src="./images/worker-1.jpg" alt="мужчина в очках и бардовой рубашке" height="260">
-                        <div class="team-list__img-content">
-                            <h3 class="team-list__img-title">Игорь Демьяненко</h3>
-                             <p class="team-list__img-description" lang="en">Product Designer</p>
+                        <div class="team-list__box">
+                            <h3 class="team-list__title">Игорь Демьяненко</h3>
+                             <p class="team-list__description" lang="en">Product Designer</p>
                              <ul class="social-list list">
                                 <li class="social-list__item">
                                     <a href="" class="social-list__link link">
@@ -194,9 +194,9 @@
                     </li>
                     <li class="team-list__item">
                         <img class="team-list__img" src="./images/worker-2.jpg" alt="девушка в очках и пиджаке" height="260">
-                        <div class="team-list__img-content">
-                            <h3 class="team-list__img-title">Ольга Репина</h3>
-                            <p class="team-list__img-description" lang="en">Frontend Developer</p>
+                        <div class="team-list__box">
+                            <h3 class="team-list__title">Ольга Репина</h3>
+                            <p class="team-list__description" lang="en">Frontend Developer</p>
                             <ul class="social-list list">
                                 <li class="social-list__item">
                                     <a href="" class="social-list__link link">
@@ -231,9 +231,9 @@
                     </li>
                     <li class="team-list__item">
                         <img class="team-list__img" src="./images/worker-3.jpg" alt="мужчина в голубой рубашке" height="260">
-                        <div class="team-list__img-content">
-                            <h3 class="team-list__img-title">Николай Тарасов</h3>
-                            <p class="team-list__img-description" lang="en">Marketing</p>
+                        <div class="team-list__box">
+                            <h3 class="team-list__title">Николай Тарасов</h3>
+                            <p class="team-list__description" lang="en">Marketing</p>
                             <ul class="social-list list">
                                 <li class="social-list__item">
                                     <a href="" class="social-list__link link">
@@ -268,9 +268,9 @@
                     </li>
                     <li class="team-list__item">
                         <img class="team-list__img" src="./images/worker-4.jpg" alt="мужчина в очках и черной футболке" height="260">
-                        <div class="team-list__img-content">
-                            <h3 class="team-list__img-title">Михаил Ермаков</h3>
-                            <p class="team-list__img-description" lang="en">UI Designer</p>
+                        <div class="team-list__box">
+                            <h3 class="team-list__title">Михаил Ермаков</h3>
+                            <p class="team-list__description" lang="en">UI Designer</p>
                             <ul class="social-list list">
                                 <li class="social-list__item">
                                     <a href="" class="social-list__link link">
@@ -279,21 +279,21 @@
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list-item">
+                                <li class="social-list__item">
                                     <a href="" class="social-list__link link">
                                         <svg class="social-list__icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list-item">
+                                <li class="social-list__item">
                                     <a href="" class="social-list__link link">
                                         <svg class="social-list__icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list-item">
+                                <li class="social-list__item">
                                     <a href="" class="social-list__link link">
                                         <svg class="social-list__icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
@@ -368,8 +368,8 @@
    <footer class="footer">
        <div class="container">
             <div class="footer-container">
-                <a class="logo logo_dark-theme link" href="">
-                    <span class="logo__accent">Web</span>Studio
+                <a class="logo logo-dark link" href="">
+                    <span class="logo-accent">Web</span>Studio
                 </a>
                 <address class="address">
                     <ul class="address-list list">
@@ -379,12 +379,12 @@
                             </a>
                         </li>
                         <li class="address-list__item">
-                            <a class="contact-list__email-link link" href="mailto:info@example.com">
+                            <a class="contact-list__link link" href="mailto:info@example.com">
                                 info@example.com
                             </a>
                         </li>
                         <li class="address-list__item">
-                            <a class="contact-list__tel-link link" href="tel:+380991111111">
+                            <a class="contact-list__link link" href="tel:+380991111111">
                                 +38 099 111 11 11
                             </a>
                         </li>
@@ -429,7 +429,7 @@
             <div class="footer-form-wrapper">
                 <p class="footer-form-wrapper__title">Подпишитесь на рассылку</p>
                 <form class="footer-form">
-                    <input class="footer-form__input_mail" type="email" name="email" placeholder="E-mail">
+                    <input class="footer-form__input" type="email" name="email" placeholder="E-mail">
                         <button class="footer-form__btn" type="button">
                             Подписаться
                             <svg class="footer-form__icon_send">
