--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,8 @@
     <!--HEADER-->
     <header class="header">
         <div class="container">
-            <a class="logo logo_light-theme link" href="">
-                <span class="logo__accent">Web</span>Studio
+            <a class="logo logo-light link" href="">
+                <span class="logo-accent">Web</span>Studio
             </a>
             <nav class="navigation">
                 <ul class="navigation-list list">
@@ -39,16 +39,16 @@
                 </ul>
             </nav>
             <ul class="contact-list list">
-                <li class="contact-list__item-mail">
-                    <a class="contact-list__email-link link" href="mailto:info@devstudio.com">
+                <li class="contact-list__item">
+                    <a class="contact-list__link link" href="mailto:info@devstudio.com">
                         <svg class="contact-list__icon" width="16" height="12">
                             <use href="./images/icons.svg#icon-mail"></use>
                         </svg>
                         info@devstudio.com
                     </a>
                 </li>
-                <li class="contact-list__item-number">
-                    <a class="contact-list__tel-link link" href="tel:+380961111111">
+                <li class="contact-list__item">
+                    <a class="contact-list__link link" href="tel:+380961111111">
                         <svg class="contact-list__icon" width="10" height="16">
                             <use href="./images/icons.svg#icon-number"></use>
                         </svg>
@@ -61,32 +61,32 @@
 
    <!--MAIN-->
     <main class="main">
-        <section class="projects section">
+        <section class="filters section">
             <div class="container">
                 <h1 hidden> Наши проекты </h1>
-            <ul class="projects-type-list list">
-                <li class="projects-type-list__item">
-                    <button class="projects-type-btn" type="button">
+            <ul class="filters-list list">
+                <li class="filters-list__item">
+                    <button class="filters-btn" type="button">
                     Все
                     </button>
                  </li>
-                 <li class="projects-type-list__item">
-                    <button class="projects-type-btn" type="button">
+                 <li class="filters-list__item">
+                    <button class="filters-btn" type="button">
                     Веб-сайты
                     </button>
                  </li>
-                 <li class="projects-type-list__item">
-                    <button class="projects-type-btn" type="button">
+                 <li class="filters-list__item">
+                    <button class="filters-btn" type="button">
                     Приложения
                     </button>
                  </li>
-                 <li class="projects-type-list__item">
-                    <button class="projects-type-btn" type="button">
+                 <li class="filters-list__item">
+                    <button class="filters-btn" type="button">
                     Дизай
                     </button>
                  </li>
-                 <li class="projects-type-list__item">
-                    <button class="projects-type-btn" type="button">
+                 <li class="filters-list__item">
+                    <button class="filters-btn" type="button">
                     Маркетинг
                     </button>
                  </li>
@@ -98,7 +98,7 @@
                             <img class="project-list__img" src="./images/technocryk.jpg" alt="ноутбук" width="370" height="294">
                             <p class="project-list__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
-                        <div class="project-list__img_content">
+                        <div class="project-list__content">
                             <h3 class="project-list__title">Технокряк</h3>
                             <p class="project-list__description">Веб-сайт</p>
                         </div>
@@ -110,7 +110,7 @@
                             <img class="project-list__img" src="./images/new-orlean.jpg" alt="игра в баскетбол" width="370" height="294">
                             <p class="project-list__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>    
-                        <div class="project-list__img_content">
+                        <div class="project-list__content">
                             <h3 class="project-list__title">Постер <span  lang="en">New Orlean vs Golden Star</span></h3>
                             <p class="project-list__description">Дизайн</p>
                         </div>
@@ -122,7 +122,7 @@
                             <img class="project-list__img" src="./images/seafood.jpg" alt="эмблема" width="370" height="294">
                             <p class="project-list__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
-                        <div class="project-list__img_content">
+                        <div class="project-list__content">
                             <h3 class="project-list__title">Ресторан <span  lang="en">Seafood</span></h3>
                             <p class="project-list__description">Приложение</p>
                         </div>
@@ -134,7 +134,7 @@
                             <img class="project-list__img" src="./images/prime.jpg" alt="наушники" width="370" height="294">
                             <p class="project-list__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
-                        <div class="project-list__img_content">
+                        <div class="project-list__content">
                             <h3 class="project-list__title">Проект <span  lang="en">Prime</span></h3>
                             <p class="project-list__description">Маркетинг</p>
                         </div>
@@ -146,7 +146,7 @@
                             <img class="project-list__img" src="./images/boxes.jpg" alt="коробки" width="370" height="294">
                             <p class="project-list__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
-                        <div class="project-list__img_content">
+                        <div class="project-list__content">
                             <h3 class="project-list__title">Проект <span  lang="en">Boxes</span></h3>
                             <p class="project-list__description">Приложение</p>
                         </div>
@@ -158,7 +158,7 @@
                             <img class="project-list__img" src="./images/inspiration.jpg" alt="монитор" width="370" height="294">
                             <p class="project-list__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
-                        <div class="project-list__img_content">
+                        <div class="project-list__content">
                             <h3 class="project-list__title">Inspiration has no Borders</h3>
                             <p class="project-list__description">Веб-сайт</p>
                         </div>
@@ -170,7 +170,7 @@
                             <img class="project-list__img" src="./images/limited-edition.jpg" alt="журнал" width="370" height="294">
                             <p class="project-list__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
-                        <div class="project-list__img_content">
+                        <div class="project-list__content">
                             <h3 class="project-list__title">Издание <span  lang="en">Limited Edition</span></h3>
                             <p class="project-list__description">Дизайн</p>
                         </div>
@@ -182,7 +182,7 @@
                             <img class="project-list__img" src="./images/lab.jpg" alt="этикетка" width="370" height="294">
                             <p class="project-list__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
-                        <div class="project-list__img_content">
+                        <div class="project-list__content">
                             <h3 class="project-list__title">Проект <span  lang="en">LAB</span></h3>
                             <p class="project-list__description">Маркетинг</p>
                         </div>
@@ -194,7 +194,7 @@
                             <img class="project-list__img" src="./images/inspiration.jpg" alt="ноутбук" width="370" height="294">
                             <p class="project-list__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
-                        <div class="project-list__img_content">
+                        <div class="project-list__content">
                             <h3 class="project-list__title" lang="en">Growing Business</h3>
                             <p class="project-list__description">Приложение</p>
                         </div>
@@ -208,8 +208,8 @@
     <footer class="footer">
         <div class="container">
              <div class="footer-container">
-                 <a class="logo logo_dark-theme link" href="">
-                     <span class="logo__accent">Web</span>Studio
+                 <a class="logo logo-dark link" href="">
+                     <span class="logo-accent">Web</span>Studio
                  </a>
                  <address class="address">
                      <ul class="address-list list">
@@ -219,12 +219,12 @@
                              </a>
                          </li>
                          <li class="address-list__item">
-                             <a class="contact-list__email-link link" href="mailto:info@example.com">
+                             <a class="contact-list__link link" href="mailto:info@example.com">
                                  info@example.com
                              </a>
                          </li>
                          <li class="address-list__item">
-                             <a class="contact-list__tel-link link" href="tel:+380991111111">
+                             <a class="contact-list__link link" href="tel:+380991111111">
                                  +38 099 111 11 11
                              </a>
                          </li>
@@ -269,7 +269,7 @@
              <div class="footer-form-wrapper">
                  <p class="footer-form-wrapper__title">Подпишитесь на рассылку</p>
                  <form class="footer-form">
-                     <input class="footer-form__input_mail" type="email" name="email" placeholder="E-mail">
+                     <input class="footer-form__input" type="email" name="email" placeholder="E-mail">
                          <button class="footer-form__btn" type="button">
                              Подписаться
                              <svg class="footer-form__icon_send">
